r2_motion/log/build_2025-05-25_15-08-25/head/stderr.log
  File "/home/adam/r2_motion/install/head/lib/python3.10/site-packages/head/head.py", line 1
    dimport serial
            ^^^^^^
SyntaxError: invalid syntax

